--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "\"# ecommerce-backend\"",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.6",
     "cloudinary": "^1.36.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,6 +18,6 @@
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "stripe": "^12.1.1"
+    "stripe": "^12.2.0"
   }
 }
