--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "stripe": "^12.2.0"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
