--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.6",
     "path": "^0.12.7",
     "stripe": "^12.2.0"
   },
